fix column height alignment, center text in columns.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 p{
-  margin-left: 30px;
+  text-align: center;
 }
 img {
   width: 300px;
@@ -18,19 +18,37 @@ h1 {
 }
 .text{
   width: 300px;
+  height: 350px;
   float: left;
   padding: 30px;
   background-color: lightpink;
   border: 2px solid black;
   margin: 30px;
 }
-
+h2 {
+  text-align: center;
+}
 .puppy h2 {
   color: #4d2800;
+  font-family: sans-serif;
 }
 .kitty h2 {
   color: #6600ff;
+  font-family: fantasy;
 }
 .piggy h2 {
   color: #00ff00;
+  font-family: cursive;
+}
+.puppy p {
+  color: #4d2800;
+  font-family: sans-serif;
+}
+.kitty p {
+  color: #6600ff;
+  font-family: fantasy;
+}
+.piggy p {
+  color: #00ff00;
+  font-family: cursive;
 }
